@@ -1,3 +1,8 @@
+2000-06-13  Martin Baulig  <baulig@suse.de>
+
+	* Makefile.am (EXTRA_DIST): Added `gnome-gettext.m4'.
+	(gnome_aclocal_DATA): Added `gnome-gettext.m4'.
+
 2000-05-29  Martin Baulig  <baulig@suse.de>
 
 	* gnome-autogen.sh: Moved to the `bin/' directory.
